assets/css/style.css
/* 
  Steven Lin's Portfolio
*/

@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  font-family: 'Montserrat', sans-serif;
}

:root {
  /* colors */
  --background-color: #1b1a1a;
  --background-color-2: #12121d;

  --clr-deep-purple-1: #0C0032;
  --clr-deep-purple-2: #190061;
  --clr-purple-1: #240090;
  --clr-purple-2: #3500d3;
  --clr-purple-3: #5900ff;
  --clr-rose: #e11d48;
  --clr-dark-grey: #282828;

  --text-white: #ffffff;

  /* sizes */
  --size-xxs: 0.5rem;
  --size-xs: 0.75rem;
  --size-sm: 0.875rem;
  --size-base: 1rem;
  --size-lg: 1.125rem;
  --size-xl: 1.25rem;
  --size-2xl: 1.5rem;
  --size-3xl: 1.875rem;
  --size-4xl: 2.25rem;
  --size-5xl: 3rem;
  --size-6xl: 3.75rem;
  --size-7xl: 4.5rem;
  --size-8xl: 6rem;
  --size-9xl: 8rem;
  --size-10xl: 10rem;
}

html {
  scroll-behavior: smooth;
}

body {
  background: var(--background-color);
  color: var(--text-white);
}

button {
  display: inline-block;
  padding: 0;
  border: none;
  background: none;
  cursor: pointer;
  color: inherit;
}

p {
  font-size: var(--size-base);
  text-align: center;
  color: var(--text-white);
}

section {
  min-height: 100vh;
  padding: 7rem 9% 2rem;
}

span {
  color: var(--clr-purple-2);
}

.btn {
  font-weight: 600;
  text-decoration: none;
  letter-spacing: -0.05em;
  background-color: var(--clr-rose);
  color: #f1f5f9;
  padding: 0.5em 1em;
  border-radius: 6px;
  box-shadow: 0 10px 20px rgba(160, 29, 57, 0.5),
    0 6px 6px rgba(160, 29, 57, 0.5), 0 0 100px -10px var(--clr-rose);
  transition: transform 0.3s, box-shadow 0.3s;
}

.btn:hover {
  transform: translateY(-3px);
  box-shadow: 0 14px 28px rgba(160, 29, 57, 0.25),
    0 10px 10px rgba(160, 29, 57, 0.22), 0 0 120px -10px var(--clr-rose);
}

.btn-container {
  display: flex;
  justify-content: center;
  padding: var(--size-base);
  gap: var(--size-base);
}

.header {
  position: fixed;
  z-index: 100;
  top: 0;
  left: 0;
  width: 100%;
  padding: 1rem 5%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: transparent;
  transition: 0.3s;
}

.header.sticky {
  background: var(--clr-deep-purple-2);
}

.logo {
  font-size: var(--size-3xl);
  color: var(--text-white);
  font-weight: 500;
}

.nav-bar a {
  font-size: var(--size-lg);
  color: var(--text-white);
  font-weight: 500;
  margin-left: 2rem;
  transition: 0.3s;
}

.nav-bar a:hover,
.nav-bar a.active-tab {
  color: var(--clr-purple-3);
}

/* Place menu/hamburger icon here */


.hero {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 8%;
  background: linear-gradient(
    rgba(36, 0, 144, 0.2), 
    rgba(0, 0, 0, 0.5)
  ), url(../../images/hero_background.jpg);
  background-size: cover;
  background-position: center;
}

.hero-content {
  max-width: 100rem;
  text-align: center;
}

.hero-content h1 {
  font-size: var(--size-6xl);
  font-weight: 700;
  line-height: 1.3;
}

.hero-content .animate-text {
  position: relative;
  /* width: 32.8rem; */
}

.hero-content .animate-text h3 {
  font-size: var(--size-2xl);
  font-weight: 900;
  color: transparent;
  -webkit-text-stroke: 1px var(--clr-purple-3);
}

.hero-content p {
  font-size: var(--size-xl);
  font-weight: 500;
  margin: 2rem 0 2rem;
}

.hero-content .hero-connect {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 3.5vw;
}

.hero-content .hero-connect a {
  color: var(--text-white);
  font-size: var(--size-4xl);
  transition: 0.3s;
}

.hero-content .hero-connect a:hover {
  color: var(--clr-purple-2);
}

.hero-content .hero-connect a:active {
  color: var(--text-white);
}

.heading {
  color: var(--text-white);
  font-size: var(--size-4xl);
  text-align: center;
  margin-bottom: var(--size-6xl);
}

.subheading {
  color: var(--text-white);
  font-size: var(--size-xl);
  text-align: center;
  padding: var(--size-base);
}


.projects {
  position: relative;
  background: var(--background-color-1);
}

.projects-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.projects-format-containers {
  display: flex;
  gap: var(--size-4xl);
}

.projects-indiv-container {
  padding: var(--size-2xl);
  flex: 1;
  background: transparent;
  border-radius: var(--size-3xl);
  border: 0.15rem solid;
  text-align: center;
}

.details-container {
  display: flex;
  text-align: initial;
  flex-wrap: wrap;
  flex-direction: row;
  gap: var(--size-5xl);
  justify-content: space-around;
}

.color-container {
  border-color: var(--clr-purple-1);
  background: var(--background-color-2);
}

.project-img {
  border-radius: 2rem;
  width: 90%;
  height: 90%;
}


.footer {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  padding: 3rem 5%;
  background: transparent;
}

.footer-content {
  max-width: 100rem;
  text-align: center;
}

.footer-content .footer-connect {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 3.5vw;
  padding-bottom: var(--size-base);
}

.footer-content .footer-connect a {
  color: var(--text-white);
  font-size: var(--size-2xl);
  transition: 0.3s;
}

.footer-content .footer-connect a:hover {
  color: var(--clr-purple-2);
}

.footer-content .footer-connect a:active {
  color: var(--text-white);
}

